--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 </head>
 
 <body>
-	<nav>
+
+<!-- Navbar -->
+	
+    <nav>
 		<div class="navbar navbar-style navbar-expand-md fixed-top">
 			<button class="btn-outline-light navbar-toggler" data-toggle="collapse" data-target="#collapse_target"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,7 +43,10 @@
 						<a class="nav-link" href="index.html">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="blogs.html">Blogs</a>
+						<a class="nav-link" href="blogs.html">Automation</a>
+					</li>
+                    <li class="nav-item">
+						<a class="nav-link" href="globalisation.html">Globalisation</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="contact.html">Contact</a>
@@ -52,7 +58,9 @@
 		    </div>
         </div>
 	</nav>
+
 	<article class="container-fluid mt-5">
+
 		<!-- Callout -->
 
 		<div class="container-fluid hmpg-head">
@@ -79,51 +87,55 @@
 				</div>
 			</div>
 		</div>
-
-		<!-- Callout Fin -->
 		<hr>
+
 		<!-- Blogs -->
+
 		<section>
 			<div class="container-fluid btm-hmpg">
 				<div class="row text-center">
 					<div class="hmpg-text col-lg-4 col-md-6 col-sm-12">
 						<div class="card">
-							<img class="card-img-top" src="assets/images/robot.jpg" alt="Card image cap">
+							<img class="card-img-top" src="assets/images/robot.jpg" alt="Image with a illustrated brain split in two halves. The left half is cybernetic and the right half is organic">
 							<div class="card-body">
 								<h2>Automation</h2>
-								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, maiores?
-									Molestiae,
-									excepturi sed modi recusandae voluptatum deleniti esse voluptas quis eveniet
-									magnam
-									distinctio? Ducimus dolore aut maiores, inventore obcaecati magnam!</p>
+								<p>
+                                A short essay written for the Open University's DD313 International Relations Module.
+                                </p>
+                                <p>
+                                Reflects on the growth of Automation and the effect that this will have on the global labour force. Analysed through Securitization and Gendered-Lens theories.
+                                </p>
 							</div>
 							<button class="btn btn-warning">Read Here!</button>
 						</div>
 					</div>
 					<div class="hmpg-text col-lg-4 col-md-6 col-sm-12">
 						<div class="card">
-							<img class="card-img-top" src="assets/images/society.jpg" alt="Card image cap">
+							<img class="card-img-top" src="assets/images/earth.jpg" alt="An image of the earth and it's major cities joined by lights to convey increasing globalisation.">
 							<div class="card-body">
-								<h2>Society</h2>
-								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, maiores?
-									Molestiae,
-									excepturi sed modi recusandae voluptatum deleniti esse voluptas quis eveniet
-									magnam
-									distinctio? Ducimus dolore aut maiores, inventore obcaecati magnam!</p>
+								<h2>Globalization</h2>
+								<p>
+                                A short essay written for the Open University's DD313 International Relations Module.
+                                </p>
+                                <p>
+                                Reflects on the work of Michel Foucault's ideas towards governmentality and the theory of Liberal Institutionalism. Analysed through case studies towards protest.
+                                </p>
 							</div>
 							<button class="btn btn-warning">Read Here!</button>
-						</div>
+						</div>                        
 					</div>
 					<div class="hmpg-text col-lg-4 d-md-none d-lg-block col-sm-12">
 						<div class="card">
-							<img class="card-img-top" src="assets/images/earth.jpg" alt="Card image cap">
+							<img class="card-img-top" src="assets/images/me.jpg" alt="The author, looking smart in a suit.">
 							<div class="card-body">
-								<h2>Globalization</h2>
-								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, maiores?
-									Molestiae,
-									excepturi sed modi recusandae voluptatum deleniti esse voluptas quis eveniet
-									magnam
-									distinctio? Ducimus dolore aut maiores, inventore obcaecati magnam!</p>
+								<h2>Contact Me</h2>
+								<p>
+                                An opportunity for people to contact the author through a number of mediums.
+                                </p>
+                                <p>
+                                Contact me if you wish to colloborate on a project. This could be relating to political theory or with web development.
+                                Or if you simply would like to enquire about the views expressed here.
+                                </p>
 							</div>
 							<button class="btn btn-warning">Read Here!</button>
 						</div>
@@ -131,8 +143,6 @@
 				</div>
 			</div>
 		</section>
-		<!-- Blogs Fin -->
-
 		<br>
 
         <!-- Footer -->
@@ -148,9 +158,9 @@
 					</div>
                     <div class="ftr-soc-lnk col-lg-4 col-md-6">
 						<div class="row">
-							<a class="col-4" href="globalisation.html"><i class="fa fa-youtube" aria-hidden="true"></i></a>
-							<a class="col-4" href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
-							<a class="col-4" href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+							<a class="col-4" href="https://www.youtube.com" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a>
+							<a class="col-4" href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+							<a class="col-4" href="https://www.linkedin.com" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6">
@@ -162,7 +172,9 @@
 			</footer>
 		</section>
 	</article>
+
 	<!-- Java -->
+
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
 	</script>
