--- a/contact.html
+++ b/contact.html
@@ -31,46 +31,43 @@
   </head>
 
   <body>
+
+     <!-- Navbar -->
+
     <nav>
-      <div class="navbar navbar-style navbar-expand-md fixed-top">
-        <button
-          class="btn-outline-light navbar-toggler"
-          data-toggle="collapse"
-          data-target="#collapse_target"
-          aria-controls="navbarNavDropdown"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"
-            ><i class="fa fa-globe" aria-hidden="true"></i
-          ></span>
-        </button>
-        <div class="collapse navbar-collapse" id="collapse_target">
-          <div class="navbar-logo">
-            <a class="navbar-brand" href="index.html">
-              <h1><i class="fa fa-globe" aria-hidden="true"></i></h1>
-            </a>
-            <span class="collapse navbar-text"
-              ><h2>Universal Relations Media</h2></span
-            >
-          </div>
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Blogs</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="test.html">Contact</a>
-            </li>
-          </ul>
+		<div class="navbar navbar-style navbar-expand-md fixed-top">
+			<button class="btn-outline-light navbar-toggler" data-toggle="collapse" data-target="#collapse_target"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"><i class="fa fa-globe" aria-hidden="true"></i></span>
+            </button>
+			<div class="collapse navbar-collapse" id="collapse_target">
+				<div class="navbar-logo">
+					<a class="navbar-brand" href="index.html">
+						<h1><i class="fa fa-globe" aria-hidden="true"></i></h1>
+					</a>
+					<span class="collapse navbar-text"><h2>Universal Relations Media</h2></span>
+				</div>
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link" href="index.html">Home</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="blogs.html">Automation</a>
+					</li>
+                    <li class="nav-item">
+						<a class="nav-link" href="globalisation.html">Globalisation</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="contact.html">Contact</a>
+					</li>
+				</ul>
+			</div>
+			<div class="small-nav-logo">
+			<h2>URM</h2>
+		    </div>
         </div>
-        <div class="small-nav-logo">
-          <h2>URM</h2>
-        </div>
-      </div>
-    </nav>
+	</nav>
+
     <article class="container-fluid mt-5">
 
 <!-- Callout -->
@@ -92,15 +89,15 @@
     </tr>
     <tr>
       <th scope="row">Youtube</th>
-      <td><a href="www.youtube.com">Tobin Stonelake <i class="fa fa-youtube" aria-hidden="true"></i></a></td>
+      <td><a href="https://www.youtube.com" target="_blank">Tobin Stonelake <i class="fa fa-youtube" aria-hidden="true"></i></a></td>
     </tr>
     <tr>
       <th scope="row">Facebook</th>
-      <td><a href="www.facebook.com" target="blank">Tobin Stonelake <i class="fa fa-facebook-official" aria-hidden="true"></i></a></td>
+      <td><a href="https://www.facebook.com" target="_blank">Tobin Stonelake <i class="fa fa-facebook-official" aria-hidden="true"></i></a></td>
     </tr>
     <tr>
       <th scope="row">Indeed</th>
-      <td><a href="www.indeed.com">Tobin Stonelake <i class="fa fa-linkedin-square" aria-hidden="true"></i></a></td>
+      <td><a href="https://www.linkedin.com" target="_blank">Tobin Stonelake <i class="fa fa-linkedin-square" aria-hidden="true"></i></a></td>
     </tr>
   </tbody>
 </table>
@@ -115,41 +112,32 @@
 
       <br>
 
-      <!-- Footer -->
+           <!-- Footer -->
 
       <section class="container-fluid">
-        <footer class="mx-auto my auto text-center">
-          <div class="row footer-style">
-            <div class="footer-logo col-lg-4 d-none d-lg-block">
-              <h5>
-                <a href="index.html">
-                  <i class="fa fa-globe" aria-hidden="true"></i>
-                </a>
-                URM
-              </h5>
-            </div>
-            <div class="col-lg-4 col-md-6 col-xs-6">
-              <p>
-                Copyright 2020<br />
-                Universal Relations Media
-              </p>
-            </div>
-            <div class="ftr-soc-lnk col-lg-4 col-md-6 col-xs-6">
-              <div class="row">
-                <a class="col-4" href="#"
-                  ><i class="fa fa-youtube" aria-hidden="true"></i
-                ></a>
-                <a class="col-4" href="#"
-                  ><i class="fa fa-facebook-official" aria-hidden="true"></i
-                ></a>
-                <a class="col-4" href="#"
-                  ><i class="fa fa-linkedin-square" aria-hidden="true"></i
-                ></a>
-              </div>
-            </div>
-          </div>
-        </footer>
-      </section>
+			<footer class="mx-auto my auto text-center">
+				<div class="row footer-style">
+					<div class="footer-logo col-lg-4 d-none d-lg-block">
+						<h5><a href="index.html">
+								<i class="fa fa-globe" aria-hidden="true"></i>
+							</a>
+							URM</h5>
+					</div>
+                    <div class="ftr-soc-lnk col-lg-4 col-md-6">
+						<div class="row">
+							<a class="col-4" href="https://www.youtube.com" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a>
+							<a class="col-4" href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+							<a class="col-4" href="https://www.linkedin.com" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6">
+						<p>Copyright 2020<br>
+                        Universal Relations Media
+                        </p>
+					</div>
+				</div>
+			</footer>
+		</section>
 
     <!-- Java -->
     <script
