Finalised all links and updated Navbar

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<a class="nav-link" href="index.html">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="blogs.html">Automation</a>
+						<a class="nav-link" href="automation.html">Automation</a>
 					</li>
                     <li class="nav-item">
 						<a class="nav-link" href="globalisation.html">Globalisation</a>
@@ -106,7 +106,7 @@
                                 Reflects on the growth of Automation and the effect that this will have on the global labour force. Analysed through Securitization and Gendered-Lens theories.
                                 </p>
 							</div>
-							<button class="btn btn-warning">Read Here!</button>
+							<button class="btn btn-warning"><a href="automation.html">Read Here!</a></button>
 						</div>
 					</div>
 					<div class="hmpg-text col-lg-4 col-md-6 col-sm-12">
@@ -121,7 +121,7 @@
                                 Reflects on the work of Michel Foucault's ideas towards governmentality and the theory of Liberal Institutionalism. Analysed through case studies towards protest.
                                 </p>
 							</div>
-							<button class="btn btn-warning">Read Here!</button>
+							<button class="btn btn-warning"><a href="globalisation.html">Read Here!</a></button>
 						</div>                        
 					</div>
 					<div class="hmpg-text col-lg-4 d-md-none d-lg-block col-sm-12">
@@ -137,7 +137,7 @@
                                 Or if you simply would like to enquire about the views expressed here.
                                 </p>
 							</div>
-							<button class="btn btn-warning">Read Here!</button>
+                                <button class="btn btn-warning"><a href="contact.html">Read Here!</a></button>                                
 						</div>
 					</div>
 				</div>
