--- a/globalisation.html
+++ b/globalisation.html
@@ -52,7 +52,7 @@
 						<a class="nav-link" href="index.html">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="blogs.html">Automation</a>
+						<a class="nav-link" href="automation.html">Automation</a>
 					</li>
                     <li class="nav-item">
 						<a class="nav-link" href="globalisation.html">Globalisation</a>
