Finalised images and finishing README and testing across devices

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 					</div>
 					<div class="hmpg-text col-lg-4 d-md-none d-lg-block col-sm-12">
 						<div class="card">
-							<img class="card-img-top" src="assets/images/me.jpg" alt="The author, looking smart in a suit.">
+							<img class="card-img-top" src="assets/images/contact.jpg" alt="The author, looking smart in a suit.">
 							<div class="card-body">
 								<h2>Contact Me</h2>
 								<p>
