--- a/automation.html
+++ b/automation.html
@@ -32,7 +32,7 @@
 
   <body>
 
-  <!-- Navbar -->
+ <!-- Navbar Clever Techie Influence -->
 
     <nav>
 		<div class="navbar navbar-style navbar-expand-md fixed-top">
