Removed personal information from contact page and replaced with anonymous information

--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
   <tbody>
     <tr>
       <th scope="row">Email</th>
-      <td>tobinstonelake@outlook.com</td>
+      <td>t@anon.com</td>
     </tr>
     <tr>
       <th scope="row">Youtube</th>
