Ran all html pages and css through the w3 validator and fixed the errors presented.

--- a/globalisation.html
+++ b/globalisation.html
@@ -36,7 +36,7 @@
 					<a class="navbar-brand" href="index.html">
 						<h1><i class="fa fa-globe" aria-hidden="true"></i></h1>
 					</a>
-					<span class="collapse navbar-text"><h2>Universal Relations Media</h2></span>
+					<h2><span class="collapse navbar-text">Universal Relations Media</span></h2>
 				</div>
 				<ul class="navbar-nav">
 					<li class="nav-item">
