--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<a class="navbar-brand" href="index.html">
 						<h1><i class="fa fa-globe" aria-hidden="true"></i></h1>
 					</a>
-					<span class="collapse navbar-text"><h2>Universal Relations Media</h2></span>
+					<h2><span class="collapse navbar-text">Universal Relations Media</span></h2>
 				</div>
 				<ul class="navbar-nav">
 					<li class="nav-item">
@@ -73,10 +73,10 @@
 									<i class="fa fa-globe" aria-hidden="true"></i></h1>
 							</div>
 							<div class="d-none d-sm-block d-lg-none">
-								<span><h2><i class="fa fa-globe" aria-hidden="true"></i> URM <i class="fa fa-globe" aria-hidden="true"></i></h2></span>
+								<h2><span><i class="fa fa-globe" aria-hidden="true"></i> URM <i class="fa fa-globe" aria-hidden="true"></i></span></h2>
 							</div>
 							<div class="d-block d-sm-none">
-								<span><h2><i class="fa fa-globe" aria-hidden="true"></i></h2></span>
+								<h2><span><i class="fa fa-globe" aria-hidden="true"></i></span></h2>
 							</div>
 							<hr>
 							<div class="d-block">
@@ -106,7 +106,7 @@
                                 Reflects on the growth of Automation and the effect that this will have on the global labour force. Analysed through Securitization and Gendered-Lens theories.
                                 </p>
 							</div>
-							<button class="btn btn-warning"><a href="automation.html">Read Here!</a></button>
+							<a class="btn btn-warning" href="automation.html">Read Here!</a>
 						</div>
 					</div>
 					<div class="hmpg-text col-lg-4 col-md-6 col-sm-12">
@@ -121,7 +121,7 @@
                                 Reflects on the work of Michel Foucault's ideas towards governmentality and the theory of Liberal Institutionalism. Analysed through case studies towards protest.
                                 </p>
 							</div>
-							<button class="btn btn-warning"><a href="globalisation.html">Read Here!</a></button>
+							<a class="btn btn-warning" href="globalisation.html">Read Here!</a>
 						</div>                        
 					</div>
 					<div class="hmpg-text col-lg-4 d-md-none d-lg-block col-sm-12">
@@ -137,7 +137,7 @@
                                 Or if you simply would like to enquire about the views expressed here.
                                 </p>
 							</div>
-                                <button class="btn btn-warning"><a href="contact.html">Read Here!</a></button>                                
+                                <a class="btn btn-warning" href="contact.html">Reach Me!</a>                               
 						</div>
 					</div>
 				</div>
