--- a/globalisation.html
+++ b/globalisation.html
@@ -28,7 +28,7 @@
 	<nav>
 		<div class="navbar navbar-style navbar-expand-md fixed-top">
 			<button class="btn-outline-light navbar-toggler" data-toggle="collapse" data-target="#collapse_target"
-                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                aria-controls="collapse_target" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"><i class="fa fa-globe" aria-hidden="true"></i></span>
             </button>
 			<div class="collapse navbar-collapse" id="collapse_target">
