Beautified all code across every page. Checked with validator afterwards, no new issues

--- a/contact.html
+++ b/contact.html
@@ -1,40 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Universal Relations Media</title>
-    <!-- BStrap -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-      crossorigin="anonymous"
-    ></script>
-    <!-- GFonts -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Muli:wght@300;400;500;600;700;800&family=Roboto+Slab:wght@300;400;500;600;700;800&display=swap"
-      rel="stylesheet"
-    />
-    <!--FAwe-->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <!-- My CSS -->
-    <link href="assets/styles.css" rel="stylesheet" type="text/css" />
-  </head>
 
-  <body>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Universal Relations Media</title>
+<!-- BStrap -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+		integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+		integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
+	</script>
+<!-- GFonts -->
+	<link
+		href="https://fonts.googleapis.com/css2?family=Muli:wght@300;400;500;600;700;800&family=Roboto+Slab:wght@300;400;500;600;700;800&display=swap"
+		rel="stylesheet" />
+<!--FAwe-->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+<!-- My CSS -->
+	<link href="assets/styles.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
 
 <!-- Navbar Clever Techie Influence -->
 
-    <nav>
+	<nav>
 		<div class="navbar navbar-style navbar-expand-md fixed-top">
 			<button class="btn-outline-light navbar-toggler" data-toggle="collapse" data-target="#collapse_target"
                 aria-controls="collapse_target" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,7 +45,7 @@
 					<li class="nav-item">
 						<a class="nav-link" href="automation.html">Automation</a>
 					</li>
-                    <li class="nav-item">
+					<li class="nav-item">
 						<a class="nav-link" href="globalisation.html">Globalisation</a>
 					</li>
 					<li class="nav-item">
@@ -63,97 +54,101 @@
 				</ul>
 			</div>
 			<div class="small-nav-logo">
-			<h2>URM</h2>
-		    </div>
-        </div>
+				<h2>URM</h2>
+			</div>
+		</div>
 	</nav>
 
-    <article class="container-fluid mt-5">
+	<article class="container-fluid mt-5">
 
 <!-- Callout -->
 
-<div class="jumbotron jumbotron-fluid">
-  <div class="container-fluid">
-  <div class="row">
-    <div class="col-md-6">
-    <h1 class="display-4"><u><strong>Contact me!</strong></u></h1>
-    <br>
-    <p class="lead">If you would like to contact the author about any further information regarding myself or the content found across this site,
-    please email me or visit one of my social media pages and leave a message. I'll be quick to respond!</p>
-    <br>
-    <table class="table">
-  <tbody>
-    <tr>
-      <th scope="row">Email</th>
-      <td>t@anon.com</td>
-    </tr>
-    <tr>
-      <th scope="row">Youtube</th>
-      <td><a href="https://www.youtube.com" target="_blank">Tobin Stonelake <i class="fa fa-youtube" aria-hidden="true"></i></a></td>
-    </tr>
-    <tr>
-      <th scope="row">Facebook</th>
-      <td><a href="https://www.facebook.com" target="_blank">Tobin Stonelake <i class="fa fa-facebook-official" aria-hidden="true"></i></a></td>
-    </tr>
-    <tr>
-      <th scope="row">Indeed</th>
-      <td><a href="https://www.linkedin.com" target="_blank">Tobin Stonelake <i class="fa fa-linkedin-square" aria-hidden="true"></i></a></td>
-    </tr>
-  </tbody>
-</table>
-    </div>
-    <div class="col-6 d-none d-md-block my-auto mx-auto">
-    <img class="img-fluid" src="assets/images/me.jpg" alt="The author, looking smart in a suit.">
-    </div>
-  </div>
-  </div>
-</div>
-    </article>
-
-      <br>
-
-           <!-- Footer -->
-
-      <section class="container-fluid">
-			<footer class="mx-auto my auto text-center">
-				<div class="row footer-style">
-					<div class="footer-logo col-lg-4 d-none d-lg-block">
-						<h5><a href="index.html">
-								<i class="fa fa-globe" aria-hidden="true"></i>
-							</a>
-							URM</h5>
+		<div class="jumbotron jumbotron-fluid">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-md-6">
+						<h1 class="display-4"><u><strong>Contact me!</strong></u></h1>
+						<br>
+						<p class="lead">If you would like to contact the author about any further information regarding
+							myself or the content found across this site,
+							please email me or visit one of my social media pages and leave a message. I'll be quick to
+							respond!</p>
+						<br>
+						<table class="table">
+							<tbody>
+								<tr>
+									<th scope="row">Email</th>
+									<td>t@anon.com</td>
+								</tr>
+								<tr>
+									<th scope="row">Youtube</th>
+									<td><a href="https://www.youtube.com" target="_blank">Tobin Stonelake
+											<i class="fa fa-youtube" aria-hidden="true"></i></a></td>
+								</tr>
+								<tr>
+									<th scope="row">Facebook</th>
+									<td><a href="https://www.facebook.com" target="_blank">Tobin Stonelake
+											<i class="fa fa-facebook-official" aria-hidden="true"></i></a></td>
+								</tr>
+								<tr>
+									<th scope="row">Indeed</th>
+									<td><a href="https://www.linkedin.com" target="_blank">Tobin Stonelake
+											<i class="fa fa-linkedin-square" aria-hidden="true"></i></a></td>
+								</tr>
+							</tbody>
+						</table>
 					</div>
-                    <div class="ftr-soc-lnk col-lg-4 col-md-6">
-						<div class="row">
-							<a class="col-4" href="https://www.youtube.com" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a>
-							<a class="col-4" href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
-							<a class="col-4" href="https://www.linkedin.com" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-6">
-						<p>Copyright 2020<br>
-                        Universal Relations Media
-                        </p>
+					    <div class="col-6 d-none d-md-block my-auto mx-auto">
+						    <img class="img-fluid" src="assets/images/me.jpg" alt="The author, looking smart in a suit.">
+                        </div>
 					</div>
 				</div>
-			</footer>
-		</section>
+			</div>
+	</article>
 
-    <!-- Java -->
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
-      integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
-      integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+	<br>
+
+<!-- Footer -->
+
+	<section class="container-fluid">
+		<footer class="mx-auto my auto text-center">
+			<div class="row footer-style">
+				<div class="footer-logo col-lg-4 d-none d-lg-block">
+					<h5><a href="index.html">
+							<i class="fa fa-globe" aria-hidden="true"></i>
+						</a>
+						URM</h5>
+				</div>
+				<div class="ftr-soc-lnk col-lg-4 col-md-6">
+					<div class="row">
+						<a class="col-4" href="https://www.youtube.com"
+							target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a>
+						<a class="col-4" href="https://www.facebook.com"
+							target="_blank"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+						<a class="col-4" href="https://www.linkedin.com"
+							target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-6">
+					<p>Copyright 2020<br>
+                        Universal Relations Media
+                        </p>
+				</div>
+			</div>
+		</footer>
+	</section>
+
+<!-- Java -->
+
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+	</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+		integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous">
+	</script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+		integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous">
+	</script>
+</body>
+
 </html>
