Further beautified index page

--- a/index.html
+++ b/index.html
@@ -5,27 +5,27 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Universal Relations Media</title>
-	<!-- BStrap -->
+<!-- BStrap -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
 		integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
 		integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
 	</script>
-	<!-- GFonts -->
+<!-- GFonts -->
 	<link
 		href="https://fonts.googleapis.com/css2?family=Muli:wght@300;400;500;600;700;800&family=Roboto+Slab:wght@300;400;500;600;700;800&display=swap"
 		rel="stylesheet" />
-	<!--FAwe-->
+<!--FAwe-->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-	<!-- My CSS -->
+<!-- My CSS -->
 	<link href="assets/styles.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
 
 <!-- Navbar Clever Techie Influence -->
-	
-    <nav>
+
+	<nav>
 		<div class="navbar navbar-style navbar-expand-md fixed-top">
 			<button class="btn-outline-light navbar-toggler" data-toggle="collapse" data-target="#collapse_target"
                 aria-controls="collapse_target" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,7 +45,7 @@
 					<li class="nav-item">
 						<a class="nav-link" href="automation.html">Automation</a>
 					</li>
-                    <li class="nav-item">
+					<li class="nav-item">
 						<a class="nav-link" href="globalisation.html">Globalisation</a>
 					</li>
 					<li class="nav-item">
@@ -54,14 +54,14 @@
 				</ul>
 			</div>
 			<div class="small-nav-logo">
-			<h2>URM</h2>
-		    </div>
-        </div>
+				<h2>URM</h2>
+			</div>
+		</div>
 	</nav>
 
 	<article class="container-fluid mt-5">
 
-		<!-- Callout -->
+<!-- Callout -->
 
 		<div class="container-fluid hmpg-head">
 			<div class="row">
@@ -73,7 +73,8 @@
 									<i class="fa fa-globe" aria-hidden="true"></i></h1>
 							</div>
 							<div class="d-none d-sm-block d-lg-none">
-								<h2><span><i class="fa fa-globe" aria-hidden="true"></i> URM <i class="fa fa-globe" aria-hidden="true"></i></span></h2>
+								<h2><span><i class="fa fa-globe" aria-hidden="true"></i> URM <i class="fa fa-globe" aria-hidden="true"></i></span>
+								</h2>
 							</div>
 							<div class="d-block d-sm-none">
 								<h2><span><i class="fa fa-globe" aria-hidden="true"></i></span></h2>
@@ -89,7 +90,7 @@
 		</div>
 		<hr>
 
-		<!-- Blogs -->
+<!-- Blogs -->
 
 		<section>
 			<div class="container-fluid btm-hmpg">
@@ -100,11 +101,13 @@
 							<div class="card-body">
 								<h2>Automation</h2>
 								<p>
-                                A short essay written for the Open University's DD313 International Relations Module.
-                                </p>
-                                <p>
-                                Reflects on the growth of Automation and the effect that this will have on the global labour force. Analysed through Securitization and Gendered-Lens theories.
-                                </p>
+									A short essay written for the Open University's DD313 International Relations
+									Module.
+								</p>
+								<p>
+									Reflects on the growth of Automation and the effect that this will have on the
+									global labour force. Analysed through Securitization and Gendered-Lens theories.
+								</p>
 							</div>
 							<a class="btn btn-warning" href="automation.html">Read Here!</a>
 						</div>
@@ -115,14 +118,16 @@
 							<div class="card-body">
 								<h2>Globalization</h2>
 								<p>
-                                A short essay written for the Open University's DD313 International Relations Module.
-                                </p>
-                                <p>
-                                Reflects on the work of Michel Foucault's ideas towards governmentality and the theory of Liberal Institutionalism. Analysed through case studies towards protest.
-                                </p>
+									A short essay written for the Open University's DD313 International Relations
+									Module.
+								</p>
+								<p>
+									Reflects on the work of Michel Foucault's ideas towards governmentality and the
+									theory of Liberal Institutionalism. Analysed through case studies towards protest.
+								</p>
 							</div>
 							<a class="btn btn-warning" href="globalisation.html">Read Here!</a>
-						</div>                        
+						</div>
 					</div>
 					<div class="hmpg-text col-lg-4 d-md-none d-lg-block col-sm-12">
 						<div class="card">
@@ -130,14 +135,15 @@
 							<div class="card-body">
 								<h2>Contact Me</h2>
 								<p>
-                                An opportunity for people to contact the author through a number of mediums.
-                                </p>
-                                <p>
-                                Contact me if you wish to colloborate on a project. This could be relating to political theory or with web development.
-                                Or if you simply would like to enquire about the views expressed here.
-                                </p>
+									An opportunity for people to contact the author through a number of mediums.
+								</p>
+								<p>
+									Contact me if you wish to colloborate on a project. This could be relating to
+									political theory or with web development.
+									Or if you simply would like to enquire about the views expressed here.
+								</p>
 							</div>
-                                <a class="btn btn-warning" href="contact.html">Reach Me!</a>                               
+							<a class="btn btn-warning" href="contact.html">Reach Me!</a>
 						</div>
 					</div>
 				</div>
@@ -145,7 +151,7 @@
 		</section>
 		<br>
 
-        <!-- Footer -->
+<!-- Footer -->
 
 		<section class="container-fluid">
 			<footer class="mx-auto my auto text-center">
@@ -156,11 +162,14 @@
 							</a>
 							URM</h5>
 					</div>
-                    <div class="ftr-soc-lnk col-lg-4 col-md-6">
+					<div class="ftr-soc-lnk col-lg-4 col-md-6">
 						<div class="row">
-							<a class="col-4" href="https://www.youtube.com" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a>
-							<a class="col-4" href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
-							<a class="col-4" href="https://www.linkedin.com" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+							<a class="col-4" href="https://www.youtube.com"
+								target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a>
+							<a class="col-4" href="https://www.facebook.com"
+								target="_blank"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+							<a class="col-4" href="https://www.linkedin.com"
+								target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6">
@@ -173,7 +182,7 @@
 		</section>
 	</article>
 
-	<!-- Java -->
+<!-- Java -->
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
